Update CBC ESR risk prototype and documentation
